# asset-management

./: .gitignore
.github/workflows/: deploy-frontend.yml  update-prices.yml
docs/: migration-plan.md  requirements.md  technical-spec.md
docs/superpowers/specs/: 2026-05-02-baseline-初始持倉-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/batch/: BatchPage.tsx
frontend/src/components/category/: CategoryPage.tsx  TagManagementDialog.tsx
frontend/src/components/charts/: ChartTooltip.tsx  PriceChart.tsx  TrendChart.tsx
frontend/src/components/common/: AuthGate.tsx  CurrencyDisplay.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/components/dashboard/: DashboardPage.tsx
frontend/src/components/funding/: FundingPage.tsx
frontend/src/components/holdings/: HoldingDetailDialog.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/hooks/: useHoldingDetail.ts  useMutations.ts  usePortfolioData.ts
frontend/src/utils/: calculations.ts  currency.ts  dateUtils.ts  navCalculator.ts  proportionalCalculator.ts
scripts/: pyproject.toml
scripts/src/portfolio_updater/: config.py  main.py  models.py  price_fetcher.py  rate_fetcher.py  sheets_client.py
worker/: fix-0050-units.sql  import-history.sql  migrate-add-batch-type.sql  package-lock.json  package.json  schema.sql  seed-initial.sql  tsconfig.json  wrangler.toml
worker/src/: auth.ts  d1.ts  index.ts  sheets.ts  types.ts  yahoo.ts
(+9 files in other folders)
